--- a/about.html
+++ b/about.html
@@ -38,22 +38,20 @@
                   Meet the Team
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="executive.html">Executive</a>
-                  <a class="dropdown-item" href="upper-division.html">Upper Division</a>
-                  <a class="dropdown-item" href="consulting.html">Consulting</a>
-                  <a class="dropdown-item" href="finance.html">Finance</a>
+                  <a class="dropdown-item" href="committees.html#consulting">Consulting</a>
+                  <a class="dropdown-item" href="committees.html#finance">Finance</a>
+                  <a class="dropdown-item" href="committees.html#marketing">Marketing</a>
+                  <a class="dropdown-item" href="committees.html#technology">Technology</a>
+                  <a class="dropdown-item" href="committees.html#visual-media">Visual Media</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="internal-networking.html">Internal Networking</a>
-                  <a class="dropdown-item" href="marketing.html">Marketing</a>
-                  <a class="dropdown-item" href="technology.html">Technology</a>
-                  <a class="dropdown-item" href="visual-media.html">Visual Media</a>
+                  <a class="dropdown-item" href="upper-division.html">Upper Division</a>
+                  <a class="dropdown-item" href="executive.html">Executive</a>
                 </div>
               </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="careers.html">Careers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="join.html">Join Us</a>
@@ -64,7 +62,7 @@
     <div class="header-spacer"></div>
     <div class="container-fluid text-light text-center header-content vertical-center">
       <div class="mx-auto">
-        <h1 class="display-2">About Us</h1>
+        <h1 class="display-2" id="title">About Us</h1>
       </div>
     </div>
   </header>
@@ -125,7 +123,27 @@
       <h1 class="display-4">Our Community</h1>
       <div class="row vertical-center">
         <div class="col-md-5">
-          <img src="https://berkeley-pbl.com/imgs/index/3.jpg" alt="" class="img-fluid">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="https://berkeley-pbl.com/imgs/index/3.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://berkeley-pbl.com/imgs/index/2.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://berkeley-pbl.com/imgs/about/2.jpg" alt="First slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
         <div class="col-md">
           Lorem ipsum dolor sit amet, cu nam putant iudicabit reprimique. Est an saepe latine temporibus, sit saepe electram intellegebat cu. No vel mollis regione. Vero honestatis appellantur ex sea, in dico habeo verterem vim, sed ea aliquip
@@ -134,63 +152,6 @@
           Cum ut mutat efficiendi, eum stet noster percipitur ei. Te modo possim mea, at dignissim torquatos sit, detracto neglegentur concludaturque ei sea.
         </div>
       </div>
-      <div class="row py-5">
-        <div class="col-md-10 mx-auto">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-M6weVgDztU" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="container-fluid py-5 text-center">
-      <div class="row">
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mx-auto py-2">
-            <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="community-img">
-        </div>
-      </div>
-      <!-- <div class="d-inline-flex flex-wrap align-items-center justify-content-center py-3">
-        <div class="community-img">
-          <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="logo-img">
-        </div>
-        <div class="community-img">
-          <img src="https://berkeley-pbl.com/imgs/about/2.jpg" class="logo-img">
-        </div>
-      </div> -->
-
     </section>
 
     <section class="container py-5 text-center">
@@ -209,43 +170,43 @@
       </div>
       <div class="row">
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/about/passion.png" class="pillar-img" alt="">
+          <img src="img/committee-icons/co.png" class="pillar-img invert-img" alt="Consulting">
           <h5>Consulting</h5>
           <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
             sit atqui.</p>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/about/passion.png" class="pillar-img" alt="">
+          <img src="img/committee-icons/fi.png" class="pillar-img invert-img" alt="Finance">
           <h5>Finance</h5>
           <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
             sit atqui.</p>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/about/passion.png" class="pillar-img" alt="">
+          <img src="img/committee-icons/in.png" class="pillar-img invert-img" alt="Internal Networking">
           <h5>Internal Networking</h5>
           <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
             sit atqui.</p>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/about/passion.png" class="pillar-img" alt="">
+          <img src="img/committee-icons/mk.png" class="pillar-img invert-img" alt="Marketing">
           <h5>Marketing</h5>
           <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
             sit atqui.</p>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/about/passion.png" class="pillar-img" alt="">
+          <img src="img/committee-icons/tc.png" class="pillar-img invert-img" alt="Technology">
           <h5>Technology</h5>
           <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
             sit atqui.</p>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/about/passion.png" class="pillar-img" alt="">
+          <img src="img/committee-icons/vm.png" class="pillar-img invert-img" alt="Visual Media">
           <h5>Visual Media</h5>
           <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
             sit atqui.</p>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/about/passion.png" class="pillar-img" alt="">
+          <img src="img/committee-icons/ud.png" class="pillar-img invert-img" alt="">
           <h5>Upper Division</h5>
           <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
             sit atqui.</p>
@@ -266,8 +227,9 @@
       <div class="footer-text">© Berkeley PBL 2020</div>
       <div class="footer-text">
         Website created and designed by
-        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>
-        and
+        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
+        <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
+        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
         <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
       </div>
   </footer>
