--- a/executive.html
+++ b/executive.html
@@ -38,22 +38,20 @@
                   Meet the Team
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="executive.html">Executive</a>
-                  <a class="dropdown-item" href="upper-division.html">Upper Division</a>
-                  <a class="dropdown-item" href="consulting.html">Consulting</a>
-                  <a class="dropdown-item" href="finance.html">Finance</a>
+                  <a class="dropdown-item" href="committees.html#consulting">Consulting</a>
+                  <a class="dropdown-item" href="committees.html#finance">Finance</a>
+                  <a class="dropdown-item" href="committees.html#marketing">Marketing</a>
+                  <a class="dropdown-item" href="committees.html#technology">Technology</a>
+                  <a class="dropdown-item" href="committees.html#visual-media">Visual Media</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="internal-networking.html">Internal Networking</a>
-                  <a class="dropdown-item" href="marketing.html">Marketing</a>
-                  <a class="dropdown-item" href="technology.html">Technology</a>
-                  <a class="dropdown-item" href="visual-media.html">Visual Media</a>
+                  <a class="dropdown-item" href="upper-division.html">Upper Division</a>
+                  <a class="dropdown-item" href="executive.html">Executive</a>
                 </div>
               </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="careers.html">Careers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="join.html">Join Us</a>
@@ -64,7 +62,7 @@
     <div class="header-spacer"></div>
     <div class="container-fluid text-light text-center header-content vertical-center">
       <div class="mx-auto">
-        <h1 class="display-2">Executive</h1>
+        <h1 class="display-2" id="title">Executive</h1>
       </div>
     </div>
   </header>
@@ -128,8 +126,9 @@
       <div class="footer-text">© Berkeley PBL 2020</div>
       <div class="footer-text">
         Website created and designed by
-        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>
-        and
+        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
+        <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
+        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
         <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
       </div>
   </footer>
