--- a/join.html
+++ b/join.html
@@ -38,22 +38,20 @@
                   Meet the Team
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="executive.html">Executive</a>
-                  <a class="dropdown-item" href="upper-division.html">Upper Division</a>
-                  <a class="dropdown-item" href="consulting.html">Consulting</a>
-                  <a class="dropdown-item" href="finance.html">Finance</a>
+                  <a class="dropdown-item" href="committees.html#consulting">Consulting</a>
+                  <a class="dropdown-item" href="committees.html#finance">Finance</a>
+                  <a class="dropdown-item" href="committees.html#marketing">Marketing</a>
+                  <a class="dropdown-item" href="committees.html#technology">Technology</a>
+                  <a class="dropdown-item" href="committees.html#visual-media">Visual Media</a>
+                  <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="internal-networking.html">Internal Networking</a>
-                  <a class="dropdown-item" href="marketing.html">Marketing</a>
-                  <a class="dropdown-item" href="technology.html">Technology</a>
-                  <a class="dropdown-item" href="visual-media.html">Visual Media</a>
+                  <a class="dropdown-item" href="upper-division.html">Upper Division</a>
+                  <a class="dropdown-item" href="executive.html">Executive</a>
                 </div>
               </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="careers.html">Careers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="join.html">Join Us</a>
@@ -73,56 +71,13 @@
     <section class="container py-5">
       <h1 class="display-4 text-center">Recruitment Timeline</h1>
       <div class="row">
-        <div class="col-lg-6 mx-auto">
-          <ul class="list-unstyled">
-            <li class="media p-3 my-3 rounded recruitment-event text-light">
-              <div class="bg-dark text-light rounded timeline-date p-1 mr-5">
-                Jan <br> 24
-              </div>
-              <div class="ml-5 media-body align-self-center">
-                <p class="mt-0 mb-1 h5">
-                  <span class="h5 d-block">Infossesion #1</span>
-                  <span class="h6">Barrows 140</span>
-                </p>
-              </div>
-            </li>
-            <li class="media p-3 my-3 rounded recruitment-event text-light">
-              <div class="bg-dark text-light rounded timeline-date p-1 mr-5">
-                Jan <br> 28
-              </div>
-              <div class="ml-5 media-body align-self-center">
-                <p class="mt-0 mb-1 h5">
-                  <span class="h5 d-block">Infossesion #2</span>
-                  <span class="h6">Barrows 140</span>
-                </p>
-              </div>
-            </li>
-            <li class="media p-3 my-3 rounded recruitment-event text-light">
-              <div class="bg-dark text-light rounded timeline-date p-1 mr-5">
-                Jan <br> 31
-              </div>
-              <div class="ml-5 media-body align-self-center">
-                <p class="mt-0 mb-1 h5">
-                  <span class="h5 d-block">Social Mixer</span>
-                  <span class="h6">Barrows 140</span>
-                </p>
-              </div>
-            </li>
-            <li class="media p-3 my-3 rounded recruitment-event text-light">
-              <div class="bg-dark text-light rounded timeline-date p-1 mr-5">
-                Jan <br> 31
-              </div>
-              <div class="ml-5 media-body align-self-center">
-                <p class="mt-0 mb-1 h5">
-                  <span class="h5 d-block">Applications Due</span>
-                  <span class="h6">9 PM</span>
-                </p>
-              </div>
-            </li>
-
-          </ul>
-        </div>
+        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/69775350_10156802841901491_596564304510058496_o.png?_nc_cat=103&_nc_ohc=3T7T9AnLQHQAX8w5i4s&_nc_ht=scontent-sjc3-1.xx&oh=7f65789ee2253d8c30ee3c9909f75d19&oe=5EA95B35" class="img-fluid" alt="">
       </div>
+    </section>
+    <section class="container pb-5 text-center">
+      <a href="#">
+        <button type="button" class="btn btn-dark btn-lg">Apply Now</button>
+      </a>
     </section>
   </main>
 
@@ -137,8 +92,9 @@
       <div class="footer-text">© Berkeley PBL 2020</div>
       <div class="footer-text">
         Website created and designed by
-        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>
-        and
+        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
+        <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
+        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
         <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
       </div>
   </footer>
