--- a/committees.html
+++ b/committees.html
@@ -94,7 +94,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -110,7 +110,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -137,7 +137,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -153,7 +153,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -180,7 +180,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -196,7 +196,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -223,7 +223,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -239,7 +239,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -266,7 +266,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
@@ -282,7 +282,7 @@
               <div class="col-md">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption">
+                  <figcaption class="py-4 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3">
                         <span class="h5">Darren Kim</span>
