--- a/about.html
+++ b/about.html
@@ -11,11 +11,11 @@
   <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 
-  <title>Berkeley PBL</title>
+  <title>About | Berkeley PBL</title>
 </head>
 
 <body>
-  <header class="header about-header">
+  <header class="header about-background">
     <nav class="navbar navbar-expand-sm navbar-dark nav-transition fixed-top py-0" id="mainNav">
       <div class="container">
         <a class="navbar-brand-trigger" href="index.html">
@@ -54,7 +54,7 @@
               <a class="nav-link" href="careers.html">Careers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="join.html">Join Us</a>
+              <a class="nav-link" href="apply.html">Join Us</a>
             </li>
           </ul>
         </div>
@@ -77,16 +77,16 @@
             goal, we serve these three stages of a member’s personal and professional development:
           </p>
           <div class="row">
-            <div class="col-sm">
-              <img src="img/about/passion.png" class="pillar-img" alt="">
+            <div class="col">
+              <img src="img/pillars/passion.png" class="pillar-img" alt="">
               <p>Find your passion</p>
             </div>
-            <div class="col-sm">
-              <img src="img/about/skills.png" class="pillar-img" alt="">
+            <div class="col">
+              <img src="img/pillars/skills.png" class="pillar-img" alt="">
               <p>Hone your skills</p>
             </div>
-            <div class="col-sm">
-              <img src="img/about/trophy.png" class="pillar-img" alt="">
+            <div class="col">
+              <img src="img/pillars/trophy.png" class="pillar-img" alt="">
               <p>Build a winning profile</p>
             </div>
           </div>
@@ -97,7 +97,7 @@
         </div>
       </div>
     </section>
-
+    <hr>
     <section class="container py-5 text-center">
       <h1 class="display-4">Our Values</h1>
       <div class="row">
@@ -118,21 +118,21 @@
         </div>
       </div>
     </section>
-
+    <hr>
     <section class="container py-5 text-center">
       <h1 class="display-4">Our Community</h1>
       <div class="row vertical-center">
-        <div class="col-md-5">
+        <div class="col-md-6">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="https://berkeley-pbl.com/imgs/index/3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/DSC04550.jpg">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="https://berkeley-pbl.com/imgs/index/2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="img/Group - on the ledge_3by2.jpg">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="https://berkeley-pbl.com/imgs/about/2.jpg" alt="First slide">
+                <img class="d-block w-100" src="img/IMG_1843_3by2.jpg">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -153,7 +153,7 @@
         </div>
       </div>
     </section>
-
+    <hr>
     <section class="container py-5 text-center">
       <h1 class="display-4">Club Structure</h1>
       <div class="row">
@@ -170,67 +170,74 @@
       </div>
       <div class="row">
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/committee-icons/co.png" class="pillar-img invert-img" alt="Consulting">
-          <h5>Consulting</h5>
-          <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-            sit atqui.</p>
+          <a href="committees.html#consulting" class="text-decoration-none text-dark">
+            <img src="img/committee-icons/co.png" class="pillar-img invert-img" alt="Consulting">
+            <h5>Consulting</h5>
+            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+              sit atqui.</p>
+          </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/committee-icons/fi.png" class="pillar-img invert-img" alt="Finance">
-          <h5>Finance</h5>
-          <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-            sit atqui.</p>
+          <a href="committees.html#finance" class="text-decoration-none text-dark">
+            <img src="img/committee-icons/fi.png" class="pillar-img invert-img" alt="Finance">
+            <h5>Finance</h5>
+            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+              sit atqui.</p>
+          </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/committee-icons/in.png" class="pillar-img invert-img" alt="Internal Networking">
-          <h5>Internal Networking</h5>
-          <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-            sit atqui.</p>
+          <a href="committees.html#marketing" class="text-decoration-none text-dark">
+            <img src="img/committee-icons/mk.png" class="pillar-img invert-img" alt="Marketing">
+            <h5>Marketing</h5>
+            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+              sit atqui.</p>
+          </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/committee-icons/mk.png" class="pillar-img invert-img" alt="Marketing">
-          <h5>Marketing</h5>
-          <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-            sit atqui.</p>
+          <a href="committees.html#technology" class="text-decoration-none text-dark">
+            <img src="img/committee-icons/tc.png" class="pillar-img invert-img" alt="Technology">
+            <h5>Technology</h5>
+            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+              sit atqui.</p>
+          </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/committee-icons/tc.png" class="pillar-img invert-img" alt="Technology">
-          <h5>Technology</h5>
-          <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-            sit atqui.</p>
+          <a href="committees.html#visual-media" class="text-decoration-none text-dark">
+            <img src="img/committee-icons/vm.png" class="pillar-img invert-img" alt="Visual Media">
+            <h5>Visual Media</h5>
+            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+              sit atqui.</p>
+          </a>
         </div>
         <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/committee-icons/vm.png" class="pillar-img invert-img" alt="Visual Media">
-          <h5>Visual Media</h5>
-          <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-            sit atqui.</p>
+          <a href="upper-division.html" class="text-decoration-none text-dark">
+            <img src="img/committee-icons/ud.png" class="pillar-img invert-img" alt="Upper Division">
+            <h5>Upper Division</h5>
+            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+              sit atqui.</p>
+          </a>
         </div>
-        <div class="col-md-6 col-lg-4 mx-auto">
-          <img src="img/committee-icons/ud.png" class="pillar-img invert-img" alt="">
-          <h5>Upper Division</h5>
-          <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
-            sit atqui.</p>
-        </div>
-      </div>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="footer bg-dark text-center text-light py-3">
-      <div class="social-media">
-        <a class="text-light mx-1 footer-icon-link" href="https://www.facebook.com/berkeleypbl"><i class="fab fa-facebook"></i></a>
-        <a class="text-light mx-1 footer-icon-link" href="https://www.instagram.com/berkeleypbl/"><i class="fab fa-instagram"></i></a>
-        <a class="text-light mx-1 footer-icon-link" href="https://www.youtube.com/user/BerkeleyPBL"><i class="fab fa-youtube"></i></a>
-        <a class="text-light mx-1 footer-icon-link" href="mailto:berkeleypblexecs@lists.berkeley.edu"><i class="far fa-envelope"></i></a>
-      </div>
-      <div class="footer-text">© Berkeley PBL 2020</div>
-      <div class="footer-text">
-        Website created and designed by
-        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
-        <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
-        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
-        <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
+      <div class="container">
+        <div class="social-media">
+          <a class="text-light mx-1 footer-icon-link" href="https://www.facebook.com/berkeleypbl"><i class="fab fa-facebook"></i></a>
+          <a class="text-light mx-1 footer-icon-link" href="https://www.instagram.com/berkeleypbl/"><i class="fab fa-instagram"></i></a>
+          <a class="text-light mx-1 footer-icon-link" href="https://www.youtube.com/user/BerkeleyPBL"><i class="fab fa-youtube"></i></a>
+          <a class="text-light mx-1 footer-icon-link" href="mailto:berkeleypblexecs@lists.berkeley.edu"><i class="far fa-envelope"></i></a>
+        </div>
+        <div class="footer-text">© Berkeley PBL 2020</div>
+        <div class="footer-text">
+          Website created and designed by
+          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
+          <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
+          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
+          <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
+        </div>
       </div>
   </footer>
 
