--- a/apply.html
+++ b/apply.html
@@ -11,11 +11,11 @@
   <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 
-  <title>Berkeley PBL</title>
+  <title>Join Us | Berkeley PBL</title>
 </head>
 
 <body>
-  <header class="header index-background hero-header">
+  <header class="header apply-background hero-header">
     <nav class="navbar navbar-expand-sm navbar-dark nav-transition fixed-top py-0" id="mainNav">
       <div class="container">
         <a class="navbar-brand-trigger" href="index.html">
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -53,7 +53,7 @@
             <li class="nav-item">
               <a class="nav-link" href="careers.html">Careers</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="apply.html">Join Us</a>
             </li>
           </ul>
@@ -62,10 +62,10 @@
     <div class="header-spacer"></div>
     <div class="container-fluid text-light text-center hero-header-content vertical-center">
       <div class="mx-auto">
-        <h1 class="display-1 p-1" id="title">Berkeley PBL</h1>
-        <p class="lead p-1">Future Business Leaders of America - Phi Beta Lambda</p>
-        <a class="nav-link" href="apply.html">
-          <button type="button" class="btn btn-light btn-lg m-1">Join Us</button>
+        <h1 class="display-1 p-1" id="title">Join Us</h1>
+        <p class="lead p-1">Submit your application by January 31<sup>st</sup> 9pm</p>
+        <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSd5huzuPJO3MAthDAEJD9AW7S_j80XdtTkS-s1myF29UbDUvA/viewform">
+          <button type="button" class="btn btn-light btn-lg m-1">Apply Here</button>
         </a>
       </div>
     </div>
@@ -77,43 +77,84 @@
   </header>
 
   <main>
-    <section class="container py-5 text-center">
-      <h1 class="display-4">Who We Are</h1>
+    <section class="container py-5">
+      <h1 class="display-4 text-center">Recruitment Timeline</h1>
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p>
-            The UC Berkeley chapter of FBLA–PBL aims to develop business leaders who care about making an impact in the world.
-          </p>
-          <a class="nav-link" href="about.html">
-            <button type="button" class="btn btn-dark btn-lg m-1">About Us</button>
-          </a>
+          <ul class="list-unstyled timeline">
+            <li class="timeline-event">
+              <div class="timeline-marker px-2 px-sm-5 order-sm-2">
+
+              </div>
+              <div class="timeline-date text-sm-center w-100 order-sm-1">
+                <h5>01/24<h5>
+              </div>
+              <div class="timeline-description order-sm-3 pb-1">
+                <h1>Infosession 1</h1>
+                <h5 class="text-muted">@ 8-10pm Barrows 166</h5>
+                <p>Lorem ipsum dolor sit amet, ea doctus ponderum duo, usu cu dicta delicata. Eu nostro mentitum eam, mel omnium dignissim disputationi an. Quo eu enim exerci graece, vim ad aeque necessitatibus. Nihil nostrud cu vix, mel ut etiam ubique definitionem. Mea ea vidisse eripuit.</p>
+              </div>
+            </li>
+            <li class="timeline-event">
+              <div class="timeline-marker px-2 px-sm-5 order-sm-2">
+
+              </div>
+              <div class="timeline-date text-sm-center w-100 order-sm-1">
+                <h5>01/29<h5>
+              </div>
+              <div class="timeline-description order-sm-3 pb-1">
+                <h1>Infosession 2</h1>
+                <h5 class="text-muted">@ 8-10pm Barrows 126</h5>
+                <p>Lorem ipsum dolor sit amet, ea doctus ponderum duo, usu cu dicta delicata. Eu nostro mentitum eam, mel omnium dignissim disputationi an. Quo eu enim exerci graece, vim ad aeque necessitatibus. Nihil nostrud cu vix, mel ut etiam ubique definitionem. Mea ea vidisse eripuit.</p>
+              </div>
+            </li>
+            <li class="timeline-event">
+              <div class="timeline-marker px-2 px-sm-5 order-sm-2">
+
+              </div>
+              <div class="timeline-date text-sm-center w-100 order-sm-1">
+                <h5>01/31<h5>
+              </div>
+              <div class="timeline-description order-sm-3 pb-1">
+                <h1>Social Mixer</h1>
+                <h5 class="text-muted">@ 7-9pm Stephens Lounge</h5>
+                <p>Lorem ipsum dolor sit amet, ea doctus ponderum duo, usu cu dicta delicata. Eu nostro mentitum eam, mel omnium dignissim disputationi an. Quo eu enim exerci graece, vim ad aeque necessitatibus. Nihil nostrud cu vix, mel ut etiam ubique definitionem. Mea ea vidisse eripuit.</p>
+              </div>
+            </li>
+            <li class="timeline-event">
+              <div class="timeline-marker px-2 px-sm-5 order-sm-2">
+
+              </div>
+              <div class="timeline-date text-sm-center w-100 order-sm-1">
+                <h5>01/31<h5>
+              </div>
+              <div class="timeline-description order-sm-3 pb-1">
+                <h1>Application Due</h1>
+                <h5 class="text-muted">@ 9pm</h5>
+                <p>Lorem ipsum dolor sit amet, ea doctus ponderum duo, usu cu dicta delicata. Eu nostro mentitum eam, mel omnium dignissim disputationi an. Quo eu enim exerci graece, vim ad aeque necessitatibus. Nihil nostrud cu vix, mel ut etiam ubique definitionem. Mea ea vidisse eripuit.</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd5huzuPJO3MAthDAEJD9AW7S_j80XdtTkS-s1myF29UbDUvA/viewform">
+                  <button type="button" class="btn btn-dark btn-lg">Apply Here</button>
+                </a>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
-    </section>
-    <hr>
-    <section class="container py-5 text-center">
-      <h1 class="display-4">What We Do</h1>
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <p>
-            The UC Berkeley chapter of FBLA–PBL aims to develop business leaders who care about making an impact in the world.
-          </p>
-          <a class="nav-link" href="committees.html">
-            <button type="button" class="btn btn-dark btn-lg m-1">Committees</button>
-          </a>
-        </div>
       </div>
+      <!-- <div class="row">
+        <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/69775350_10156802841901491_596564304510058496_o.png?_nc_cat=103&_nc_ohc=3T7T9AnLQHQAX8w5i4s&_nc_ht=scontent-sjc3-1.xx&oh=7f65789ee2253d8c30ee3c9909f75d19&oe=5EA95B35" class="img-fluid" alt="">
+      </div> -->
+    </section>
+    <section class="container pb-5 text-center">
     </section>
     <hr>
-    <section class="container py-5 text-center">
-      <h1 class="display-4">Why PBL</h1>
+    <section class="container py-5">
+      <h1 class="display-4 text-center">Mailing List</h1>
       <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <p>
-            The UC Berkeley chapter of FBLA–PBL aims to develop business leaders who care about making an impact in the world.
-          </p>
-          <a class="nav-link" href="committees.html">
-            <button type="button" class="btn btn-dark btn-lg m-1">Button????</button>
+        <div class="col-md-8 mx-auto text-center">
+          <p>Join our mailing list to stay up-to-date with our recruitment events and announcements!</p>
+          <a href="https://tinyurl.com/sp20interest">
+            <button type="button" class="btn btn-dark">Join Mailing List</button>
           </a>
         </div>
       </div>
