--- a/careers.html
+++ b/careers.html
@@ -11,11 +11,11 @@
   <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 
-  <title>Berkeley PBL</title>
+  <title>Careers | Berkeley PBL</title>
 </head>
 
 <body>
-  <header class="header about-header">
+  <header class="header careers-background">
     <nav class="navbar navbar-expand-sm navbar-dark nav-transition fixed-top py-0" id="mainNav">
       <div class="container">
         <a class="navbar-brand-trigger" href="index.html">
@@ -54,7 +54,7 @@
               <a class="nav-link active" href="careers.html">Careers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="join.html">Join Us</a>
+              <a class="nav-link" href="apply.html">Join Us</a>
             </li>
           </ul>
         </div>
@@ -202,19 +202,21 @@
 
   <footer>
     <div class="footer bg-dark text-center text-light py-3">
-      <div class="social-media">
-        <a class="text-light mx-1 footer-icon-link" href="https://www.facebook.com/berkeleypbl"><i class="fab fa-facebook"></i></a>
-        <a class="text-light mx-1 footer-icon-link" href="https://www.instagram.com/berkeleypbl/"><i class="fab fa-instagram"></i></a>
-        <a class="text-light mx-1 footer-icon-link" href="https://www.youtube.com/user/BerkeleyPBL"><i class="fab fa-youtube"></i></a>
-        <a class="text-light mx-1 footer-icon-link" href="mailto:berkeleypblexecs@lists.berkeley.edu"><i class="far fa-envelope"></i></a>
-      </div>
-      <div class="footer-text">© Berkeley PBL 2020</div>
-      <div class="footer-text">
-        Website created and designed by
-        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
-        <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
-        <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
-        <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
+      <div class="container">
+        <div class="social-media">
+          <a class="text-light mx-1 footer-icon-link" href="https://www.facebook.com/berkeleypbl"><i class="fab fa-facebook"></i></a>
+          <a class="text-light mx-1 footer-icon-link" href="https://www.instagram.com/berkeleypbl/"><i class="fab fa-instagram"></i></a>
+          <a class="text-light mx-1 footer-icon-link" href="https://www.youtube.com/user/BerkeleyPBL"><i class="fab fa-youtube"></i></a>
+          <a class="text-light mx-1 footer-icon-link" href="mailto:berkeleypblexecs@lists.berkeley.edu"><i class="far fa-envelope"></i></a>
+        </div>
+        <div class="footer-text">© Berkeley PBL 2020</div>
+        <div class="footer-text">
+          Website created and designed by
+          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Darren Kim</a>,
+          <a class="text-light" href="https://www.linkedin.com/in/dennis-pham-342638170/">Dennis Pham</a>,
+          <a class="text-light" href="https://www.linkedin.com/in/darrenkim21/">Grace Chi</a>, and
+          <a class="text-light" href="https://www.linkedin.com/in/jeremymui/">Jeremy Mui</a>
+        </div>
       </div>
   </footer>
 
