--- a/upper-division.html
+++ b/upper-division.html
@@ -11,11 +11,11 @@
   <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 
-  <title>Committees | Berkeley PBL</title>
+  <title>Upper Division | Berkeley PBL</title>
 </head>
 
-<body data-spy="scroll" data-target="#spy" data-offset="200">
-  <header class="header committees-background">
+<body>
+  <header class="header ud-background">
     <nav class="navbar navbar-expand-sm navbar-dark nav-transition fixed-top py-0" id="mainNav">
       <div class="container">
         <a class="navbar-brand-trigger" href="index.html">
@@ -62,7 +62,7 @@
     <div class="header-spacer"></div>
     <div class="container-fluid text-light text-center header-content vertical-center">
       <div class="mx-auto">
-        <h1 class="display-2" id="title">Committees</h1>
+        <h1 class="display-2" id="title">Upper Division</h1>
       </div>
     </div>
   </header>
@@ -70,25 +70,14 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-lg-2 order-lg-2 d-none d-lg-block pt-5">
-          <nav id="spy" class="sticky-top ml-5" data-toggle="toc">
-            <ul class="nav navbar-nav text-muted">
-              <li><a class="nav-link" href="#consulting">Consulting</a></li>
-              <li><a class="nav-link" href="#finance">Finance</a></li>
-              <li><a class="nav-link" href="#marketing">Marketing</a></li>
-              <li><a class="nav-link" href="#technology">Technology</a></li>
-              <li><a class="nav-link" href="#visual-media">Visual Media</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="col-lg-8 offset-lg-2 order-lg-1">
-          <section class="committee" id="consulting">
-            <h1 class="display-4 text-center">Consulting</h1>
-            <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
+        <div class="col-lg-8 mx-auto">
+          <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
               ocurreret
               contentiones ex eam. Has detraxit assentior in.
 
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
+          <section class="committee">
+            <h1 class="display-4 text-center">Anthony and Carrington</h1>
             </p>
             <div class="row no-gutters">
               <div class="col-md-5 mx-auto">
@@ -98,7 +87,7 @@
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
                         <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <span class="h5 text-muted"> | Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -115,7 +104,7 @@
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
                         <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <span class="h5 text-muted"> | Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -127,15 +116,8 @@
               </div>
             </div>
           </section>
-          <hr>
-          <section class="committee" id="finance">
-            <h1 class="display-4 text-center">Finance</h1>
-            <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
-              ocurreret
-              contentiones ex eam. Has detraxit assentior in.
-
-              Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
-            </p>
+          <section class="committee">
+            <h1 class="display-4 text-center">Henry and Kai</h1>
             <div class="row no-gutters">
               <div class="col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
@@ -144,7 +126,7 @@
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
                         <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <span class="h5 text-muted"> | Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -161,7 +143,7 @@
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
                         <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <span class="h5 text-muted"> | Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -173,9 +155,8 @@
               </div>
             </div>
           </section>
-          <hr>
-          <section class="committee" id="marketing">
-            <h1 class="display-4 text-center">Marketing</h1>
+          <section class="committee">
+            <h1 class="display-4 text-center">Conor and Roger</h1>
             <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
               ocurreret
               contentiones ex eam. Has detraxit assentior in.
@@ -190,7 +171,7 @@
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
                         <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <span class="h5 text-muted"> | Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -207,99 +188,7 @@
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
                         <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
-                      </div>
-                      <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
-                      </div>
-                    </div>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-          </section>
-          <hr>
-          <section class="committee" id="technology">
-            <h1 class="display-4 text-center">Technology</h1>
-            <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
-              ocurreret
-              contentiones ex eam. Has detraxit assentior in.
-
-              Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
-            </p>
-            <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
-                <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
-                    <div class="">
-                      <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
-                      </div>
-                      <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
-                      </div>
-                    </div>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="col-md-5 mx-auto">
-                <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
-                    <div class="">
-                      <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
-                      </div>
-                      <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
-                      </div>
-                    </div>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-          </section>
-          <hr>
-          <section class="committee" id="visual-media">
-            <h1 class="display-4 text-center">Visual Media</h1>
-            <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
-              ocurreret
-              contentiones ex eam. Has detraxit assentior in.
-
-              Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
-            </p>
-            <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
-                <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
-                    <div class="">
-                      <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
-                      </div>
-                      <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
-                        <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
-                      </div>
-                    </div>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="col-md-5 mx-auto">
-                <figure class="bio-card text-center border border-dark">
-                  <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
-                    <div class="">
-                      <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <span class="h5 text-muted"> | Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
