More responsive bios

--- a/internal-networking.html
+++ b/internal-networking.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 col-md-5 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-5 mx-auto">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
             <figcaption class="py-4 caption text-light">
@@ -100,7 +100,7 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-lg-3 col-md-5 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-5 mx-auto">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
             <figcaption class="py-4 caption text-light">
@@ -117,7 +117,7 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-lg-3 col-md-5 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-5 mx-auto">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
             <figcaption class="py-4 caption text-light">
@@ -134,7 +134,7 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-lg-3 col-md-5 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-5 mx-auto">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
             <figcaption class="py-4 caption text-light">
