--- a/committees.html
+++ b/committees.html
@@ -91,7 +91,7 @@
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
             <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -108,7 +108,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -137,7 +137,7 @@
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
             <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -154,7 +154,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -183,7 +183,7 @@
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
             <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -200,7 +200,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -229,7 +229,7 @@
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
             <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -246,7 +246,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -275,7 +275,7 @@
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
             <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -292,7 +292,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
