--- a/upper-division.html
+++ b/upper-division.html
@@ -80,7 +80,7 @@
             <h1 class="display-4 text-center">Anthony and Carrington</h1>
             </p>
             <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -97,7 +97,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -119,7 +119,7 @@
           <section class="committee">
             <h1 class="display-4 text-center">Henry and Kai</h1>
             <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -136,7 +136,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -164,7 +164,7 @@
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
             <div class="row no-gutters">
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
@@ -181,7 +181,7 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-5 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
                   <figcaption class="py-4 caption text-light">
