Move photos around

--- a/internal-networking.html
+++ b/internal-networking.html
@@ -159,10 +159,10 @@
             <img src="img/IMG_5205.jpg" class="community-img">
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mx-auto p-2">
-            <img src="img/DO1170320 (1).jpg" class="community-img">
+            <img src="img/DSC04550.jpg" class="community-img">
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mx-auto p-2">
-            <img src="img/IMG_8715.jpg" class="community-img">
+            <img src="img/IMG_0421.jpg" class="community-img">
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mx-auto p-2">
             <img src="img/dsc_0172_43233884620_o.jpg" class="community-img">
