--- a/about.html
+++ b/about.html
@@ -126,13 +126,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/IMG_9993-2.jpg">
+                <img class="d-block w-100" src="img/DO1170320 (1).jpg">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="img/Group - on the ledge.jpg">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/DSC04550.jpg">
+                <img class="d-block w-100" src="img/IMG_9993-3.jpg">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
