Change layout of bio names and roles to 2 lines

--- a/upper-division.html
+++ b/upper-division.html
@@ -79,15 +79,15 @@
           <section class="committee">
             <h1 class="display-4 text-center">Anthony and Carrington</h1>
             </p>
-            <div class="row no-gutters">
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+            <div class="row">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Project Manager</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -97,14 +97,14 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Project Manager</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -118,15 +118,15 @@
           </section>
           <section class="committee">
             <h1 class="display-4 text-center">Henry and Kai</h1>
-            <div class="row no-gutters">
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+            <div class="row">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Project Manager</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -136,14 +136,14 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Project Manager</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -163,15 +163,15 @@
 
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
-            <div class="row no-gutters">
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+            <div class="row">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Project Manager</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -181,14 +181,14 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Project Manager</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Project Manager</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
