--- a/committees.html
+++ b/committees.html
@@ -90,15 +90,15 @@
 
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
-            <div class="row no-gutters">
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+            <div class="row">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -108,14 +108,14 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -136,15 +136,15 @@
 
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
-            <div class="row no-gutters">
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+            <div class="row">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -154,14 +154,14 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -182,15 +182,15 @@
 
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
-            <div class="row no-gutters">
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+            <div class="row">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -200,14 +200,14 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -228,15 +228,15 @@
 
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
-            <div class="row no-gutters">
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+            <div class="row">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -246,14 +246,14 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -274,15 +274,15 @@
 
               Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
             </p>
-            <div class="row no-gutters">
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+            <div class="row">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -292,14 +292,14 @@
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-11 col-sm-7 col-md-5 mx-auto">
+              <div class="col-11 col-sm-7 col-md-6 mx-auto">
                 <figure class="bio-card text-center border border-dark">
                   <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-                  <figcaption class="py-4 caption text-light">
+                  <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <span class="h5">Darren Kim</span>
-                        <span class="h5 text-muted"> | Consulting Chair</span>
+                        <h5 class="h5">Darren Kim</h5>
+                        <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
