--- a/executive.html
+++ b/executive.html
@@ -77,8 +77,8 @@
               <img class="bio-img img-thumbnail rounded-circle mr-3" src="https://berkeley-pbl.com/imgs/ex/darren.jpg" alt="Generic placeholder image">
               <div class="media-body">
                 <p class="mt-0 mb-1 h5">
-                  <span class="h5">Darren Kim</span>
-                  <span class="h5 text-muted"> | MVP </span>
+                  <h5 class="h5">Darren Kim</h5>
+                  <span class="h6 role"> | MVP </span>
                 </p>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
                 felis in faucibus.
@@ -89,8 +89,8 @@
               <img class="bio-img img-thumbnail rounded-circle mr-3" src="https://berkeley-pbl.com/imgs/ex/darren.jpg" alt="Generic placeholder image">
               <div class="media-body">
                 <p class="mt-0 mb-1 h5">
-                  <span class="h5">Darren Kim</span>
-                  <span class="h5 text-muted"> | MVP </span>
+                  <h5 class="h5">Darren Kim</h5>
+                  <span class="h6 role"> | MVP </span>
                 </p>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
                 felis in faucibus.
@@ -101,8 +101,8 @@
               <img class="bio-img img-thumbnail rounded-circle mr-3" src="https://berkeley-pbl.com/imgs/ex/darren.jpg" alt="Generic placeholder image">
               <div class="media-body">
                 <p class="mt-0 mb-1 h5">
-                  <span class="h5">Darren Kim</span>
-                  <span class="h5 text-muted"> | MVP </span>
+                  <h5 class="h5">Darren Kim</h5>
+                  <span class="h6 role"> | MVP </span>
                 </p>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
                 felis in faucibus.
