--- a/internal-networking.html
+++ b/internal-networking.html
@@ -83,14 +83,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 col-11 col-sm-7 col-md-5 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-            <figcaption class="py-4 caption text-light">
+            <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
-                  <span class="h5">Darren Kim</span>
-                  <span class="h5 text-muted"> | Internal Networking Chair</span>
+                  <h5 class="h5">Darren Kim</h5>
+                  <span class="h6 role">Internal Networking Chair</span>
                 </div>
                 <div class="bio-hidden px-1">
                   <p> Hello my name is Darren and I like making finger guns </p>
@@ -100,14 +100,14 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-lg-3 col-11 col-sm-7 col-md-5 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-            <figcaption class="py-4 caption text-light">
+            <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
-                  <span class="h5">Darren Kim</span>
-                  <span class="h5 text-muted"> | Internal Networking Chair</span>
+                  <h5 class="h5">Darren Kim</h5>
+                  <span class="h6 role">Internal Networking Chair</span>
                 </div>
                 <div class="bio-hidden px-1">
                   <p> Hello my name is Darren and I like making finger guns </p>
@@ -117,14 +117,14 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-lg-3 col-11 col-sm-7 col-md-5 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-            <figcaption class="py-4 caption text-light">
+            <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
-                  <span class="h5">Darren Kim</span>
-                  <span class="h5 text-muted"> | Internal Networking Chair</span>
+                  <h5 class="h5">Darren Kim</h5>
+                  <span class="h6 role">Internal Networking Chair</span>
                 </div>
                 <div class="bio-hidden px-1">
                   <p> Hello my name is Darren and I like making finger guns </p>
@@ -134,14 +134,14 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-lg-3 col-11 col-sm-7 col-md-5 mx-auto">
+        <div class="col-lg-3 col-11 col-sm-7 col-md-6 mx-auto">
           <figure class="bio-card text-center border border-dark">
             <img class="w-100 bio-rect-img" src="img/ex/darren.jpg" alt="Generic placeholder image">
-            <figcaption class="py-4 caption text-light">
+            <figcaption class="pb-3 mx-2 caption text-light">
               <div class="">
                 <div class="bio-visible rounded-top py-3 px-1">
-                  <span class="h5">Darren Kim</span>
-                  <span class="h5 text-muted"> | Internal Networking Chair</span>
+                  <h5 class="h5">Darren Kim</h5>
+                  <span class="h6 role">Internal Networking Chair</span>
                 </div>
                 <div class="bio-hidden px-1">
                   <p> Hello my name is Darren and I like making finger guns </p>
@@ -154,7 +154,7 @@
       </div>
     </div>
     <section class="container-fluid py-5 text-center">
-      <div class="row no-gutters">
+      <div class="row">
         <div class="col-lg-3 col-md-4 col-sm-6 mx-auto p-2">
             <img src="img/IMG_5205.jpg" class="community-img">
         </div>
